syntax = "proto3";
package operation.template;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

/* Aggregate of the information necessary for placing clone orders.
 * Next Id: 7 */
 message Template {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  google.protobuf.StringValue description = 5;
  string bundle_id = 6;
}
